# medici2

./: .clang-format  .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.md
cli/: CMakeLists.txt  ace-selector.cpp  ace-selector.h  alternative-selection.cpp  alternative-selection.h  and-condition.cpp  and-condition.h  apply-to-range-condition.cpp  apply-to-range-condition.h  cli.cpp  cli.h  condition.h  extravagant-conditions.cpp  extravagant-conditions.h  extravagant-patience.cpp  extravagant-patience.h  main.cpp  medici-condition.cpp  medici-condition.h  move-condition.cpp  move-condition.h  one-card-condition.cpp  one-card-condition.h  sequence.cpp  sequence.h  storage.cpp  storage.h
converter/: CMakeLists.txt  cards-deck-to-c++.cpp
gtest-main/: CMakeLists.txt  main.cpp
gui/: .ycm_extra_conf.py  CMakeLists.txt  calculation.cpp  calculation.h  calculation_controller.cpp  calculation_controller.h  calculation_thread.cpp  calculation_thread.h  calculator_window.cpp  calculator_window.h  card_selector.cpp  card_selector.h  cards_translations.cpp  cards_translations.h  deck_preference.cpp  deck_preference.h  deck_preference_tab.cpp  deck_preference_tab.h  deck_selector.cpp  deck_selector.h  exception.h  gui_card_selector.cpp  gui_card_selector.h  gui_deck_selector.cpp  gui_deck_selector.h  main.cpp  main_form.cpp  main_form.h  progress.cpp  progress.h  progress_widget.cpp  progress_widget.h  settings_helper.h
gui/helpers/: cards_translations.cpp  cards_translations.h  gui_exception.h
gui/selectors/: gui_card_selector.cpp  gui_card_selector.h  gui_deck_selector.cpp  gui_deck_selector.h
gui/widgets/: clickable_group_box.cpp  clickable_group_box.h  deck_preference.cpp  deck_preference.h  progress_widget.cpp  progress_widget.h
gui/widgets/selectors/: gui_card_selector.cpp  gui_card_selector.h  gui_deck_selector.cpp  gui_deck_selector.h
gui/windows/: calculator_window.cpp  calculator_window.h  main_form.cpp  main_form.h
performance/: .ycm_extra_conf.py  CMakeLists.txt  main.cpp  performance.cpp  performance.h
source/: .ycm_extra_conf.py  CMakeLists.txt
source/calculator/: manager.cpp  manager.h  thread.cpp  thread.h
source/cards/: and-condition.cpp  and-condition.h  any-rank-condition.h  any-suit-condition.h  apply-to-range-condition.cpp  apply-to-range-condition.h  card-selector.cpp  card-selector.h  card.cpp  card.h  condition.h  deck-selector.cpp  deck-selector.h  deck-selector.hpp  deck.cpp  deck.h  memory-consumption.md  move-condition.cpp  move-condition.h  one-card-condition.cpp  one-card-condition.h  or-condition.h  selector.cpp  selector.h  sequence.cpp  sequence.h  simple-sequence.h  standard-36-deck.cpp  standard-36-deck.h  storage.cpp  storage.h
source/cards/sources/: and-condition.cpp  any-rank-condition.cpp  any-suit-condition.cpp  apply-to-range-condition.cpp  card.cpp  move-condition.cpp  one-card-condition.cpp  or-condition.cpp  sequence.cpp  simple-sequence.cpp  storage.cpp
source/cards/tests/: and-condition.cpp  any-rank-condition.cpp  any-suit-condition.cpp  apply-to-range-condition.cpp  card.cpp  move-condition.cpp  one-card-condition.cpp  or-condition.cpp  print.cpp  print.h  sequence.cpp  simple-sequence.cpp  storage.cpp
source/helpers/: sequence-mixer.h  time_measure.cpp  time_measure.h
source/helpers/sources/: sequence-mixer.cpp  time_measure.cpp
source/helpers/tests/: sequence-mixer.cpp  time_measure.cpp
source/i-ching/: i-ching.cpp  i-ching.h  patience-selector.cpp  patience-selector.h
source/i-ching/sources/: i-ching.cpp  patience-selector.cpp
source/i-ching/tests/: i-ching.cpp
source/logxx/: logxx.cpp  logxx.h
source/medici/: generator.h  generator.hpp  medici.cpp  medici.h  medici.hpp  patience-selector.cpp  patience-selector.h  patience-target-card-selector.cpp  patience-target-card-selector.h  patience.cpp  patience.h  patience.hpp
source/medici/sources/: patience-selector.cpp  patience-target-card-selector.cpp  patience.cpp
source/medici/tests/: patience-selector.cpp  patience.cpp
source/mixer/: factory.h  full-capacity-mixer.h  mixer.h  mixer.hpp  one-swap-mixer.h
source/mixer/sources/: factory.cpp
source/mixer/tests/: factory.cpp  mixer.cpp
test/: .ycm_extra_conf.py  CMakeLists.txt  comparisons.h  config.h.in  main.cpp  operators.h  operators.hpp  test_fw.cpp  test_fw.h  test_fw.hpp
test/modules/: calculator-manager.cpp  calculator-manager.h  calculator-thread.cpp  calculator-thread.h  deck-selector.cpp  deck-selector.h  i-ching.cpp  i-ching.h  medici.cpp  medici.h  mixer.cpp  mixer.h  operators.cpp  operators.h  test_medici.cpp  test_medici.h  test_mixer.cpp
ycm/: .ycm_extra_conf.py  ycmflags.py
