add_library (source-library
    "cards/and-condition.cpp"
    "cards/apply-to-range-condition.cpp"
    "cards/card.cpp"
    "cards/move-condition.cpp"
    "cards/one-card-condition.cpp"
    "cards/sequence.cpp"
    "cards/storage.cpp"

    "helpers/time_measure.cpp"

    "i-ching/i-ching.cpp"
    "i-ching/patience-selector.cpp"

    "medici/patience-selector.cpp"
    "medici/patience-target-card-selector.cpp"
    "medici/patience.cpp"

    "mixer/sources/factory.cpp"
)
